# acpdbg

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: Makefile  crash.c
src/acpdbg/: __init__.py  acp_client.py  bridge.py  cli.py  config.py  context.py  lldb_inspector.py  lldb_plugin.py  log.py  mcp_server.py  mock_agent.py  prompts.py  safety.py  session.py
tests/: test_bridge_mcp.py  test_context_and_safety.py  test_end_to_end.py  test_log.py
