[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acpdbg"
version = "0.1.0"
description = "Debug native crashes by handing them to your coding agent over ACP (Agent Client Protocol)."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "phimage (Eric Marchand)" }]
keywords = ["debugger", "lldb", "acp", "agent-client-protocol", "coding-agent", "crash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "agent-client-protocol>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/acpdbg/acpdbg"

[project.scripts]
acpdbg = "acpdbg.cli:main"
acpdbg-session = "acpdbg.session:main"
acpdbg-mcp = "acpdbg.mcp_server:main"
acpdbg-mock-agent = "acpdbg.mock_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acpdbg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
